spade-tests/src/snapshots/spade_tests__ast_lowering__comptime_pipeline_inst_depth_works.snap
---
source: spade-tests/src/ast_lowering.rs
---
$config X = 1

pipeline(2) test(clk: clock) -> bool {
    reg*2;
        true
}

entity main(clk: clock) -> bool {
    inst($if X == 1 {3} $else {2}) test(clk)
}


error: Pipeline depth mismatch
  ┌─ testinput:9:22
  │
3 │ pipeline(2) test(clk: clock) -> bool {
  │          - test has depth 2
  ·
9 │     inst($if X == 1 {3} $else {2}) test(clk)
  │                      ^ Expected depth 2


